--- a/src/components/ProjectHolder.css
+++ b/src/components/ProjectHolder.css
@@ -1,33 +1,54 @@
-.project-box {
+/* .project-box {
     position: relative;
-}
+} */
 
 .project-header {
     text-align: left;
     letter-spacing: 0.01em;
+    font-weight: 500;
+    font-size: 1.5rem;
 }
 
 .project-holder {
-    width: 64rem;
-    height: 24rem;
+    aspect-ratio: 2.27;
+    border: 0.5px solid #2d2f31;
     border-radius: 1em;
+    position: relative;
+}
+
+.project-display {
+    width: 100%;
+    height: 100%;
     background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 1em;
 }
 
 .project-selector {
-    width: 6rem;
-    height: 6rem;
+    width: 6%;
+    height: 14%;
     background: white;
+    /* background: #000; */
     border-radius: 1000vh;
     position: absolute;
-    right: 0;
-    bottom: 33%;
+    /* right: 5rem;
+    bottom: 2rem; */
+    inset: auto 2rem 45% auto;
     padding-block: 0;
     padding-inline: 0;
     margin: 0;
+    box-shadow: inset 0.5px 0.5px 20px 0px rgba(45, 47, 49, 0.1);
+}
+
+.project-selector:hover {
+    border: 1px solid rgba(145, 196, 243, 0.5);
 }
 
 .project-selector_icon{
     display: flex;
     place-content: center;
 }
+
+/* @media screen and (min-width:) {
+    
+} */
