--- a/src/components/ProjectHolder.css
+++ b/src/components/ProjectHolder.css
@@ -38,16 +38,18 @@
     padding-inline: 0;
     margin: 0;
     box-shadow: inset 0.5px 0.5px 8px 2px rgba(45, 47, 49, 0.1);
+    display: flex;
+    place-content: center;
 }
 
 .project-selector:hover {
     border: 1px solid rgba(145, 196, 243, 0.5);
 }
 
-.project-selector_icon{
+/* .project-selector_icon{
     display: flex;
     place-content: center;
-}
+} */
 
 /* @media screen and (min-width:) {
     
